tenants/_templates/network-policy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: <TENANT_NAMESPACE>
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
